Fixed some broken styles

--- a/styles/PageStandard.module.css
+++ b/styles/PageStandard.module.css
@@ -81,7 +81,6 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    width: 90%;
     display: flex;
     text-align: center;
     font-size: 40px;
